[build-system]
requires = [
   'setuptools-git-versioning', 
   'setuptools',
   'wheel',
   'build',
   'cmake',
   ]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*"]
build-verbosity = 1

[tool.cibuildwheel.linux]
build-frontend = "build"
before-build = [ 
    "source scl_source enable devtoolset-10",
    "pip install cmake", 
    "pip install ninja", 
]

[tool.cibuildwheel.macos]
build-frontend = "build"
before-build = [ 
    "pip install cmake ninja", 
]
[tool.cibuildwheel.windows]
before-build = [ 
    "pip install cmake", 
]
