[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
name = openjij
url = https://www.openjij.org
author = Jij Inc.
author_email = info@j-ij.com
description = Framework for the Ising model and QUBO
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Documentation=https://doc.openjij.org/build/html/
  

[options]
python_requires = >=3.7, <3.11
setup_requires =
    setuptools_scm[toml]
    pytest-runner
    cmake 
    scikit-build
install_requires =
    dimod >= 0.9.1
    numpy >= 1.18.4, !=1.21.0, !=1.21.1
    scipy
    requests
    jij-cimod >= 1.2.3
    typing-extensions >= 3.10.0; python_version < "3.8.0"
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    pytest-runner
    pytest-randomly
    pytest-clarity
    pytest-spec
    coverage
zip_safe = False
packages = 
    openjij
    openjij.model
    openjij.sampler
    openjij.sampler.chimera_gpu
    openjij.utils
