# Copyright 2022 Jij Inc.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[install_lib]
optimize = 1
compile = 1

[aliases]
test=pytest

[metadata]
name = openjij
url = https://www.openjij.org
author = Jij Inc.
author_email = info@openjij.org
description = Framework for the Ising model and QUBO.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Source=https://github.com/OpenJij/OpenJij
    Documentation=https://openjij.github.io/OpenJij-Documentation/
    Reference=https://ref.openjij.org/index.html
    Tutorial=https://tutorial.openjij.org/build/html/index.html
  

[options]
python_requires = >=3.7, <3.11
install_requires =
    numpy >=1.17.3, < 1.24.0
    dimod < 0.12.0
    scipy >= 1.7.3, < 1.10.0
    requests >= 2.28.0, < 2.29.0
    jij-cimod >= 1.4.6, < 1.5.0
    typing-extensions >= 4.2.0, < 4.3.0
tests_require =
    pytest
    pytest-mock
    pytest-cov
    pytest-html
    pytest-runner
    pytest-randomly
    pytest-spec
    coverage
